--- a/DSFBX.ImporterGUI/MainWindow.xaml
+++ b/DSFBX.ImporterGUI/MainWindow.xaml
@@ -112,7 +112,7 @@
                 VerticalContentAlignment="Center"
                 IsChecked="{Binding Config.ImportSkeletonEnable}"
                 >
-                <TextBlock IsEnabled="{Binding Config.ImportSkeletonEnable}">
+                <TextBlock>
                     <Run Text="Import Skeleton from"/>
                     <LineBreak/>
                     <Run Text="existing Entity BND:"/>
@@ -215,6 +215,17 @@
 
             </Grid>
 
+            <CheckBox
+                HorizontalAlignment="Right"
+                VerticalAlignment="Top"
+                Margin="0,206,120,0"
+                Width="221"
+                HorizontalContentAlignment="Left"
+                VerticalContentAlignment="Center"
+                IsChecked="{Binding Config.LaunchModelViewerAfterImport}" Height="29"
+                >
+                Launch Model Viewer After Import
+            </CheckBox>
 
             <!--Import-->
             <Button
